# P3-agentic-policy-derivation

./: .gitignore  .pre-commit-config.yaml  ASSUMPTIONS.md  MERGE_CHECKLIST.md  PATENT.md  PR_DESCRIPTIONS.md  README.md  RUNBOOK.md  conftest.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yml
core-side-patch/: audit.py  models.py  observability.py  permissions.py
core-side-patch/api/: guardrails.py
core-side-patch/services/: derivation_engine.py  envelope.py  opa_client.py  policy_provider.py  provenance.py  rate_limit.py  receipt_chain.py  receipts.py
tests/benchmark/: PATENT_TECHNICAL_EFFECT.md  test_benchmark_scenario.py
tests/fixtures/: sample_seed_data.py  test_human_workflow_walkthrough.py  test_multi_tenant_seed_sanity.py
tests/regression/: test_opa_circuit_breaker_race_documented_safe.py  test_receipt_chain_fork_regression.py  test_sqlite_staticpool_race_regression.py
tests/security/: SECURITY_REVIEW.md  test_concurrent_cross_org_isolation.py  test_envelope_adversarial.py  test_failure_path_leaks.py  test_key_never_leaks.py  test_rate_limit_bypass.py  test_rate_limit_under_concurrent_load.py
tests/stress/: STRESS_TEST_RESULTS.md  test_adversarial_envelope_injection.py  test_chain_verification_at_scale.py  test_concurrent_check_action.py  test_concurrent_guardrail_compilation.py  test_high_throughput_multi_ai_system.py  test_long_running_memory_check.py  test_receipt_chain_concurrency.py  test_sustained_opa_outage.py
tests/unit/: _opa_test_util.py  test_derivation_engine.py  (+14 more)
