[project]
name = "complivibe-patent-p3-agentic-policy-derivation"
version = "0.1.0"
description = "Automated derivation and compilation of multi-tenant regulatory compliance obligations into machine-enforceable agent policy."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2.6",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "cryptography>=42.0",
    "pynacl>=1.5",
    "structlog>=24.1",
    "prometheus-client>=0.20",
    "agentmesh_mcp_receipts[crypto]>=3.3.0,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
    "black>=24.3",
    "pre-commit>=3.7",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "S", "B"]
ignore = ["S101"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false
mypy_path = "core-side-patch"
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=core-side-patch --cov-report=term-missing"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
